WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
26281
REGRESSION: Copying from TextEdit/OmniGraffle and pasting into editable region loses images
https://bugs.webkit.org/show_bug.cgi?id=26281
Summary
REGRESSION: Copying from TextEdit/OmniGraffle and pasting into editable regio...
Justin Garcia
Reported
2009-06-09 14:38:42 PDT
Create a new TextEdit document Add some text and images Copy everything Paste into a content editable region (Blot should be OK) Images are missing. This is because I'll
Attachments
patch
(2.03 KB, patch)
2009-06-09 21:51 PDT
,
Justin Garcia
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Justin Garcia
Comment 1
2009-06-09 14:42:34 PDT
This is because WebKit's _documentFragmentFromPasteboard prefers RTF over RTFD.
Justin Garcia
Comment 2
2009-06-09 21:51:37 PDT
Created
attachment 31124
[details]
patch
mitz
Comment 3
2009-06-09 22:48:19 PDT
Is it possible to make an automated test for this bug?
Eric Seidel (no email)
Comment 4
2009-06-10 00:41:29 PDT
Comment on
attachment 31124
[details]
patch r=me. Can we please please fix all that copy/paste code in that function in a follow-up patch? It's so disgusting! A single static function which took a PboardType and returned a fragment would get rid of *all* those stupid lines! Heck, we could even make it just an Array of Pboard types so that the preferred order was much easier to read and this kind of bug wouldn't happen again. ;) Oh, and it should be possible to make a test for this... Admittedly, kinda hard, but I would expect event.dataTransfer.setData() to be able to test this.
Adam Barth
Comment 5
2009-06-13 20:38:19 PDT
Will land.
Adam Barth
Comment 6
2009-06-13 22:07:17 PDT
Sending WebKit/mac/ChangeLog Sending WebKit/mac/WebView/WebHTMLView.mm Transmitting file data .. Committed revision 44668. Next time, please base your patches in the root directory so we can use the awesome-sauce WebKitTools.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug