2009-06-09  Justin Garcia  <justin.garcia@apple.com>

Reviewed by Eric Seidel.  Landed by Adam Barth.

        https://bugs.webkit.org/show_bug.cgi?id=26281

        REGRESSION: Copying from TextEdit/OmniGraffle and pasting into editable
        region loses images

        Prefer RTFD (RTF with inline images) over RTF.  In
        http://trac.webkit.org/changeset/19745 I accidently reversed their
        order.

        * WebView/WebHTMLView.mm:
        (-[WebHTMLView _documentFragmentFromPasteboard:inContext:allowPlainText:]):



Canonical link: https://commits.webkit.org/36486@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44668 268f45cc-cd09-0410-ab3c-d52691b4dbfc